--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
   "author": "fazt",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "fs-extra": "^8.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/fs-extra": "^8.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.5.14",
     "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.9",
